// Copyright 2022 Silent Eight Pte. Ltd.

syntax = "proto3";

package com.silenteight.proto.fab.api.v1;

import "google/api/annotations.proto";
import "google/api/field_behavior.proto";

option java_package = "com.silenteight.proto.fab.api.v1";
option java_outer_classname = "AlertDetailsApiProto";
option java_multiple_files = true;

service AlertMessageDetailsService {
  rpc AlertsDetails (AlertMessagesDetailsRequest) returns (AlertMessagesDetailsResponse) {}
}

message AlertMessagesDetailsRequest {
  repeated AlertMessageHeader alerts = 1 [(google.api.field_behavior) = REQUIRED];
}

message AlertMessageHeader {
  //Is created on Connector side eg batches/98a5c316-a112-11ec-9538-7f77482b9b7b
  string batch_name = 1 [(google.api.field_behavior) = REQUIRED];
  //Is created on Connector side messages/98a5c316-a112-11ec-9538-7f77482b9b7c
  string message_name = 2 [(google.api.field_behavior) = REQUIRED];
}

message AlertMessagesDetailsResponse {
  repeated AlertMessageDetails alerts = 1 [(google.api.field_behavior) = REQUIRED];
}

message AlertMessageDetails {
  string message_name = 1 [(google.api.field_behavior) = REQUIRED];
  //Field contains Message data in json format.
  //Example JSON Path is $.Body.msg_SendMessage.Messages[0].Message
  string payload = 2 [(google.api.field_behavior) = REQUIRED];
}
